fixed_templates/rancher_checkov_fixed_template.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: release-name-rancher
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  labels:
    app: release-name-rancher
    chart: rancher-2.7.4
    heritage: Helm
    release: release-name
  namespace: test-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: release-name-rancher
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: release-name-rancher
        release: release-name
    spec:
      priorityClassName: rancher-critical
      serviceAccountName: release-name-rancher
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - release-name-rancher
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: NotIn
                values:
                - windows
      tolerations:
      - key: cattle.io/os
        value: linux
        effect: NoSchedule
        operator: Equal
      containers:
      - image: rancher/rancher:v2.7.4
        imagePullPolicy: Always
        name: rancher
        ports:
        - containerPort: 80
          protocol: TCP
        args:
        - --http-listen-port=80
        - --https-listen-port=443
        - --add-local=true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        volumeMounts: null
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          runAsUser: 25000
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsGroup: 25000
      volumes: null
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 25000
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-rancher
  labels:
    app: release-name-rancher
    chart: rancher-2.7.4
    heritage: Helm
    release: release-name
  annotations:
    cert-manager.io/issuer: release-name-rancher
    cert-manager.io/issuer-kind: Issuer
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
  namespace: test-ns
spec:
  rules:
  - host: '*.example.com'
    http:
      paths:
      - backend:
          service:
            name: release-name-rancher
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - host
    secretName: tls-rancher-ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
